	matches found instead.

	Display <c-h> as <bs> only at the beginning of key sequence.

	Better terminal buffer title for plugin in neovim.  Thanks to
	randomizedthinking.

	Enabled wildmenu for menus.

	Skip UTF-8 BOM for file preview.

	Allow suffixes and prefixes in 'classify' to be of up to eight characters
	in length.  Thanks to elricbk.

	Fixed kind of a duplicate of first history element on =.

	Fixed displaying size for symbolic links to directories on changing views
	and determining whether they point to a directory in custom views.

	Fixed backward search in menus, which was performed in the opposite
	direction.

	Fixed hanging on sudden terminal loss.  Thanks to aleksejrs.

	Fixed crash on using extremely long function name.

	Fixed overwriting files after editing destination file name.  Thanks to
	rbong.

	Fixed querying file information on 64-bit Windows.  Thanks to santhoshr.

	Fixed crash on very long option value on :set.  Thanks to aleksejrs.

	Fixed displaying non-latin characters in LHS of mapping in map menus.
	Thanks to filterfalse.

	Fixed updating view columns after local options synchronization via
	:sync!.  Thanks to filterfalse.

0.8.1 to 0.8.1a

	Added c key to menus that inserts parts of menu line into command-line.
	Thanks to filterfalse.

	Added { and } keys to normal and visual modes.  They act similar to ( and
	), but always consider whether entry is a file or directory.  Thanks to
	octos.

	Apply local filter on picking element of `:history filter` menu.

	Added --disable-build-timestamp option to configure script to perform
	reproducible build.  Thanks to Hendrik Jaeger (a.k.a. henk).

	Display more meaningful message on failure to extract option name (unknown
	option: string).

	Handle register specified for gs normal mode command.  Select files listed
	in that register.  Thanks to filterfalse.

	More accurate parsing of bar not surrounded with whitespace.

	Be consistent with regard to when local state is changed and do not reset